# PSE

./: CMakeLists.txt  compile.bat  glad.c  racine simple.py  racine.cpp  simulation.cpp  simulation.hpp  simulation.py
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  compile.bat  dll.bat  glad.c  racine.cpp  simulation.cpp  simulation.hpp
